style.css
/* ... */
nav a:hover, nav a.current {
	background: rgba(0,0,0,0.3);
	border-left: 1px solid rgba(0,0,0,0.1);
	border-right: 1px solid rgba(255,255,255,0.1);
}

nav li.last a {
	padding: 10px;
	margin: 13px 45px 10px 10px;
	width: 10px;
	height: 10px;
	line-height: normal;
}

nav li.last a:hover {
	border-radius: 50em;
}

#wrapper {
	border: 1px solid #c7c7c7;
	margin: 0 auto;
	width: 100%;
	height: 2500px;
	position: relative;
	background: url(images/bg.png) repeat;
	overflow: hidden;
}

#myInfo {
	position: absolute;
	top: 200px;
	left: 20px;
}

#myInfo h1 {
	font-family: 'VT323', 'Pixelify Sans', cursive, monospace;
	font-size: 72px;
	line-height: 1.0;
	letter-spacing: 4px;
	font-weight: 400;
	color: #0f754f;
	text-shadow: 2px 2px 0 #ffffff, -1px -1px 0 rgba(0,0,0,0.2), 0 3px 5px rgba(0,0,0,0.3);
	margin-bottom: 6px;
	text-transform: uppercase;
}

#myInfo h2 {
	font-family: 'Pixelify Sans', cursive, sans-serif;
	font-size: 16px;
	line-height: 24px;
	font-weight: 600;
	margin-left: 7px;
	letter-spacing: 2px;
	text-transform: uppercase;
	color: #ffffff !important;
	text-shadow: 1px 1px 3px #000000;
}

/* Start Text */

#startText {
	position: absolute;
	top: 140px;
	left: 50%;
	width: 240px;
	margin: 0 0 0 -120px;
	z-index: 20;
	text-align: center;
	font-family: 'Pixelify Sans', cursive, sans-serif;
	font-size: 14px;
	color: #ffffff !important;
	text-shadow: 1px 1px 2px #000000;
	line-height: 1.6;
	-webkit-animation: fade 2.5s ease infinite;
	-moz-animation: fade 2.5s ease infinite;
	animation: fade 2.5s ease infinite;
}

#startText img {
	width: 80px;
	display: block;
	margin: 0 auto 5px;
	padding-right: 4px;
}

@-webkit-keyframes fade {
	0% {
		opacity: 1;
	}
	50% {
		opacity: 0;
	}
	100% {
		opacity: 1;
	}
}

@-moz-keyframes fade {
	0% {
		opacity: 1;
	}
	50% {
		opacity: 0;
	}
	100% {
		opacity: 1;
	}
}

@-keyframes fade {
	0% {
		opacity: 1;
	}
	50% {
		opacity: 0;
	}
	100% {
		opacity: 1;	
	}
}

/* View */

.cave {
	position: absolute;
	left: 0;
	background: url(images/caveBG.png) repeat;
	width: 100%;
	z-index: 50;
}

.caveHole {
	position: absolute;
	left: 50%;
	width: 50px;
	background: rgba(0,0,0,0.8);
	border: 1px solid rgba(255,255,255,0.3);
	border-radius: 10px 10px 0 0;
	margin: 0 0 0 -25px;
	z-index: 52;	
}

.caveHoleTrack {
	position: absolute;
	left: 50%;
	width: 200px;
	background: url(images/caveBG.png) repeat;
	margin: 0 0 0 -100px;
	z-index: 54;
}

.sea {
	position: absolute;
	left: 0;
	background: url(images/sea.png) repeat;
	width: 100%;
	z-index: 50;
}

.bridge {
	position: absolute;
	left: 50%;
	width: 210px;
	background: url(images/bridge.png) repeat-y;
	margin: 0 0 0 -105px;
	z-index: 52;
}

#startCave {
	top: 0;
	height: 100px;
}

#startCave::after {
	position: absolute;
	bottom: -23px;
	left: 0;
	background: url(images/caveBottomBG.png) repeat;
	height: 32px;
	width: 100%;
	z-index: 51;
	content: "";
	box-shadow: 0 5px 5px rgba(0,0,0,0.3);
}

#startCaveHole {
	top: 94px;
	border-bottom: none;
	height: 28px;
}

#startCaveHoleTrack {
	top: 0;
	height: 92px;
}

#endSea {
	bottom: 0;
	height: 800px;
	-webkit-animation: seamove 6s linear infinite;
	-moz-animation: seamove 6s linear infinite;
	animation: seamove 6s linear infinite;
}

@-webkit-keyframes seamove {
	0% {
		background-position: 0 0;
	}
	100% {
		background-position: 65px 0;
	}
}

@-moz-keyframes seamove {
	0% {
		background-position: 0 0;
	}
	100% {
		background-position: 65px 0;
	}
}

@-keyframes seamove {
	0% {
		background-position: 0 0;
	}
	100% {
		background-position: 65px 0;
	}
}

#endSea::after {
	position: absolute;
	top: 0px;
	left: 0;
	background: url(images/seaStart.png) repeat center bottom;
	height: 9px;
	width: 100%;
	z-index: 51;
	content: "";
	box-shadow: 0 4px 3px rgba(0,0,0,0.3);
}

#endCaveHoleGlow {
	height: 0;
	width: 50px;
	border-top: 60px solid rgba(255, 252, 0, 0.5);
	border-left: 30px solid transparent;
	border-right: 30px solid transparent;
	position: absolute;
	left: 50%;
	margin: 0 0 0 -54px;
	bottom: 600px;
	content: "";
	z-index: 52;
	-webkit-animation: glow 3s ease infinite;
	-moz-animation: glow 3s ease infinite;
	animation: glow 3s ease infinite;
}

@-webkit-keyframes glow {
	0% {
		opacity: 1;
	}
	10% {
		opacity: 0;
	}
	35% {
		opacity: 1;
	}
	40% {
		opacity: 0;
	}
	50% {
		opacity: 1;
	}
	75% {
		opacity: 0;
	}
	76% {
		opacity: 1;
	}
	79% {
		opacity: 0;
	}
	84% {
		opacity: 1;
	}
}

@-moz-keyframes glow {
	0% {
		opacity: 1;
	}
	10% {
		opacity: 0;
	}
	35% {
		opacity: 1;
	}
	40% {
		opacity: 0;
	}
	50% {
		opacity: 1;
	}
	75% {
		opacity: 0;
	}
	76% {
		opacity: 1;
	}
	79% {
		opacity: 0;
	}
	84% {
		opacity: 1;
	}
}

@-keyframes glow {
	0% {
		opacity: 1;
	}
	10% {
		opacity: 0;
	}
	35% {
		opacity: 1;
	}
	40% {
		opacity: 0;
	}
	50% {
		opacity: 1;
	}
	75% {
		opacity: 0;
	}
	76% {
		opacity: 1;
	}
	79% {
		opacity: 0;
	}
	84% {
		opacity: 1;
	}
}

#endBridge {
	bottom: 600px;
	height: 200px;
}

#endBridge::after {
	position: absolute;
	bottom: -16px;
	left: 0;
	background: url(images/endCaveAfterBG.png) repeat center bottom;
	height: 16px;
	width: 100%;
	z-index: 51;
	content: "";
}

#boat {
	position: absolute;
	z-index: 53;
	bottom: 500px;
	left: 50%;
	width: 420px;
	margin-left: -210px;
	height: 194px;
	cursor: pointer;
	background: url(images/boat.png) no-repeat center;	
	transition: all 5s linear 1.5s;
}

#boat.sail {
	left: -20%;
}

#boat.sailBack {
	left: 100%;
	margin-left: 0;
}

#boat .meSail {
	position: absolute;
	width: 32px;
	height: 32px;
	background: url(images/walkingMe.png) no-repeat 0 -32px;
	top: 50px;
	left: 70px;
	display: none;
	z-index: 54;
}

#boat .meSail::after {
	background: rgba(0, 0, 0, 0.3);
	width: 16px;
	height: 19px;
	content: "";
	bottom: -8px;
	left: 8px;
	position: absolute;
	border-radius: 75px;
	box-shadow: 0 0 10px rgba(0,0,0,0.3);
	z-index: 12;
}
/* ... */

